# r-type_test

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/engine/components/: Transform.hpp  Velocity.hpp
engine/include/engine/core/: Component.hpp  Entity.hpp  Entity.inl  Scene.hpp  System.hpp
engine/include/engine/ecs/: Entity.hpp  Registry.hpp  SparseSet.hpp  System.hpp  View.hpp
engine/include/engine/gameplay/: Controllable.hpp  Enemy.hpp  Health.hpp  Projectile.hpp
engine/include/engine/graphics/: Animation.hpp  BackgroundManager.hpp  Renderer.hpp  Sprite.hpp
engine/include/engine/physics/: Hitbox.hpp  Transform.hpp  Velocity.hpp
engine/include/engine/systems/: AnimationSystem.hpp  BoundarySystem.hpp  CollisionSystem.hpp  EnemyBehaviorSystem.hpp  EnemySpawnSystem.hpp  EnemyVisualSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  ScrollingBackgroundSystem.hpp  ShootingSystem.hpp
engine/src/core/: Entity.cpp  Scene.cpp  System.cpp
engine/src/gameplay/: Controllable.cpp  Enemy.cpp  Health.cpp  Projectile.cpp
engine/src/graphics/: Animation.cpp  BackgroundManager.cpp  Renderer.cpp  Sprite.cpp
engine/src/physics/: Hitbox.cpp  Transform.cpp  Velocity.cpp
engine/src/systems/: AnimationSystem.cpp  BoundarySystem.cpp  CollisionSystem.cpp  EnemyBehaviorSystem.cpp  EnemySpawnSystem.cpp  EnemyVisualSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  ScrollingBackgroundSystem.cpp  ShootingSystem.cpp
game/: CMakeLists.txt
game/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
